; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/extr_obs-ffmpeg-source.c_is_local_file_modified.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/extr_obs-ffmpeg-source.c_is_local_file_modified.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [14 x i8] c"is_local_file\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"input\00", align 1
@.str.2 = private unnamed_addr constant [13 x i8] c"input_format\00", align 1
@.str.3 = private unnamed_addr constant [11 x i8] c"local_file\00", align 1
@.str.4 = private unnamed_addr constant [8 x i8] c"looping\00", align 1
@.str.5 = private unnamed_addr constant [13 x i8] c"buffering_mb\00", align 1
@.str.6 = private unnamed_addr constant [20 x i8] c"close_when_inactive\00", align 1
@.str.7 = private unnamed_addr constant [9 x i8] c"seekable\00", align 1
@.str.8 = private unnamed_addr constant [14 x i8] c"speed_percent\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*)* @is_local_file_modified to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_local_file_modified(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @UNUSED_PARAMETER(i32* %16)
  %18 = load i32*, i32** %6, align 8
  %19 = call i32 @obs_data_get_bool(i32* %18, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  store i32 %19, i32* %7, align 4
  %20 = load i32*, i32** %4, align 8
  %21 = call i32* @obs_properties_get(i32* %20, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  store i32* %21, i32** %8, align 8
  %22 = load i32*, i32** %4, align 8
  %23 = call i32* @obs_properties_get(i32* %22, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0))
  store i32* %23, i32** %9, align 8
  %24 = load i32*, i32** %4, align 8
  %25 = call i32* @obs_properties_get(i32* %24, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.3, i64 0, i64 0))
  store i32* %25, i32** %10, align 8
  %26 = load i32*, i32** %4, align 8
  %27 = call i32* @obs_properties_get(i32* %26, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.4, i64 0, i64 0))
  store i32* %27, i32** %11, align 8
  %28 = load i32*, i32** %4, align 8
  %29 = call i32* @obs_properties_get(i32* %28, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.5, i64 0, i64 0))
  store i32* %29, i32** %12, align 8
  %30 = load i32*, i32** %4, align 8
  %31 = call i32* @obs_properties_get(i32* %30, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.6, i64 0, i64 0))
  store i32* %31, i32** %13, align 8
  %32 = load i32*, i32** %4, align 8
  %33 = call i32* @obs_properties_get(i32* %32, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.7, i64 0, i64 0))
  store i32* %33, i32** %14, align 8
  %34 = load i32*, i32** %4, align 8
  %35 = call i32* @obs_properties_get(i32* %34, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.8, i64 0, i64 0))
  store i32* %35, i32** %15, align 8
  %36 = load i32*, i32** %8, align 8
  %37 = load i32, i32* %7, align 4
  %38 = icmp ne i32 %37, 0
  %39 = xor i1 %38, true
  %40 = zext i1 %39 to i32
  %41 = call i32 @obs_property_set_visible(i32* %36, i32 %40)
  %42 = load i32*, i32** %9, align 8
  %43 = load i32, i32* %7, align 4
  %44 = icmp ne i32 %43, 0
  %45 = xor i1 %44, true
  %46 = zext i1 %45 to i32
  %47 = call i32 @obs_property_set_visible(i32* %42, i32 %46)
  %48 = load i32*, i32** %12, align 8
  %49 = load i32, i32* %7, align 4
  %50 = icmp ne i32 %49, 0
  %51 = xor i1 %50, true
  %52 = zext i1 %51 to i32
  %53 = call i32 @obs_property_set_visible(i32* %48, i32 %52)
  %54 = load i32*, i32** %13, align 8
  %55 = load i32, i32* %7, align 4
  %56 = call i32 @obs_property_set_visible(i32* %54, i32 %55)
  %57 = load i32*, i32** %10, align 8
  %58 = load i32, i32* %7, align 4
  %59 = call i32 @obs_property_set_visible(i32* %57, i32 %58)
  %60 = load i32*, i32** %11, align 8
  %61 = load i32, i32* %7, align 4
  %62 = call i32 @obs_property_set_visible(i32* %60, i32 %61)
  %63 = load i32*, i32** %15, align 8
  %64 = load i32, i32* %7, align 4
  %65 = call i32 @obs_property_set_visible(i32* %63, i32 %64)
  %66 = load i32*, i32** %14, align 8
  %67 = load i32, i32* %7, align 4
  %68 = icmp ne i32 %67, 0
  %69 = xor i1 %68, true
  %70 = zext i1 %69 to i32
  %71 = call i32 @obs_property_set_visible(i32* %66, i32 %70)
  ret i32 1
}

declare dso_local i32 @UNUSED_PARAMETER(i32*) #1

declare dso_local i32 @obs_data_get_bool(i32*, i8*) #1

declare dso_local i32* @obs_properties_get(i32*, i8*) #1

declare dso_local i32 @obs_property_set_visible(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
